welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: value and is not a member of Boolean
  if(aSmile and bSmile) {
            ^monkeyTrouble:5: error: value and is not a member of Boolean
  else if(!aSmile and !bSmile) {
                  ^